fix: sidebar-item__menu-wraper opacity on IE (#381)

--- a/packages/fuselage/src/components/Sidebar/styles.scss
+++ b/packages/fuselage/src/components/Sidebar/styles.scss
@@ -161,8 +161,9 @@ $sidebar-item-color-selected: theme('sidebar-item-color-selected', colors.foregr
 
     &:hover &__menu-wraper,
     &.focus-within &__menu-wraper {
-      width: lengths.size(20);
+      position: relative;
 
+      width: lengths.size(20);
       margin-inline: lengths.margin(4);
 
       opacity: 1;
